<resources>
    <string name="app_name">BLAST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BLAST</string>
    <string name="nav_header_subtitle">Better Living Application Software Tech</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="student_feed">Student Feed</string>
    <string name="to_do">To Do</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Are you sure you want to exit?</string>
    <string name="button">Button</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>