<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.blast.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_student_feed"
        android:name="com.example.blast.ui.student_feed.StudentFeedFragment"
        android:label="@string/student_feed"
        tools:layout="@layout/fragment_student_feed" />

    <fragment
        android:id="@+id/nav_to_do"
        android:name="com.example.blast.ui.to_do.ToDoFragment"
        android:label="@string/to_do"
        tools:layout="@layout/fragment_to_do" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.blast.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.blast.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>